--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
-      'run', 'deploy', 'seminar-transformer',  # <-- your service name
+      'run', 'deploy', 'paperform-seminar-transformer',  # <-- your service name
       '--source', '.',                         # <-- assumes cloudbuild.yaml is in the same folder as main.py
       '--entry-point', 'process_pubsub_push',  # <-- change if your function has a different name
       '--runtime', 'python311',
