--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,10 @@
-options:
-  logging: CLOUD_LOGGING_ONLY
-
 steps:
-- name: 'gcr.io/k8s-skaffold/pack'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args: [
-    'build', 'gcr.io/$PROJECT_ID/paperform-seminar-transform',
-    '--builder', 'gcr.io/buildpacks/builder:v1',
-    '--env', 'GOOGLE_FUNCTION_TARGET=process_pubsub_push'
+    'gcloud', 'builds', 'submit',
+    '--pack', 'image=gcr.io/$PROJECT_ID/paperform-seminar-transform',
+    '--pack', 'builder=gcr.io/buildpacks/builder:v1',
+    '--pack', 'env=GOOGLE_FUNCTION_TARGET=process_pubsub_push'
   ]
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -17,3 +15,5 @@ steps:
     '--platform', 'managed',
     '--allow-unauthenticated'
   ]
+options:
+  logging: CLOUD_LOGGING_ONLY
